--- a/blog/templates/blog/single_post.html
+++ b/blog/templates/blog/single_post.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Blog homepage">
     <meta name="author" content="R.Shpak">
     <meta name="generator" content="Jekyll v4.1.1">
-    <title>Posts</title>
+    <title>{{ post.post_title }}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-    
+
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-italic">
             <a class="navbar-brand" href="#">My First Blog</a>
@@ -64,7 +64,7 @@
                         <a class="nav-link" href="#">GitHub</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About me</a>
+                        <a class="nav-link" href="{% static 'Aboutme.docx' %}">About me</a>
                     </li>
                 </ul>
             </div>
@@ -75,15 +75,11 @@
     <main>
 
         <div class="container">
-
-            <h1 class="mt-3 mb-5">Recent posts</h1>
-
-            {% for post in posts.all %}          
-            <a href=""><h2>{{ post.post_title }}</h2> </a>           
+         
+            <h2 class="mt-3">{{ post.post_title }}</h2>        
             <img class="my-2" src="{{ post.post_image.url }}" height="225">
              <p>{{ post.post_text|truncatechars:100 }}</p> 
-            <div class="mb-5"><em>{{ post.post_date }}</em></div>
-            {% endfor %}
+            <em>{{ post.post_date }}</em>
 
         </div>
 
