--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+{% load static %}
 
 <head>
   <meta charset="utf-8">
@@ -64,7 +65,7 @@
             <a class="nav-link" href="#">Facebook</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About me</a>
+            <a class="nav-link" href="{% static 'Aboutme.docx' %}">About me</a>
           </li>
         </ul>
       </div>
