--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -62,7 +62,7 @@
             <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Facebook</a>
+            <a class="nav-link" href="https://github.com/rshpak1996">GitHub</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% static 'Aboutme.docx' %}">About me</a>
