--- a/blog/templates/blog/single_post.html
+++ b/blog/templates/blog/single_post.html
@@ -51,7 +51,7 @@
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-italic">
-            <a class="navbar-brand" href="#">My First Blog</a>
+            <a class="navbar-brand" href="{% url 'home' %}">My First Blog</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,10 +59,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Blog <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="{% url 'showblog' %}">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">GitHub</a>
+                        <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://github.com/rshpak1996">GitHub</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% static 'Aboutme.docx' %}">About me</a>
@@ -78,7 +78,7 @@
         <div class="container">
          
             <h2 class="mt-3">{{ post.post_title }}</h2>        
-            <img class="my-2" src="{{ post.post_image.url }}" height="225">
+            <img class="my-2" src="{{ post.post_image.url }}" height="400">
              <p>{{ post.post_text|truncatechars:100 }}</p> 
             <em>{{ post.post_date }}</em>
 
