--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Blog homepage">
   <meta name="author" content="R.Shpak">
   <meta name="generator" content="Jekyll v4.1.1">
-  <title>Homepage</title>
+  <title>My First Blog</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
@@ -51,7 +51,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark font-italic ">
-      <a class="navbar-brand" href="#">My First Blog</a>
+      <a class="navbar-brand" href="{% url 'home' %}">My First Blog</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,10 +59,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Blog <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'showblog' %}">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/rshpak1996">GitHub</a>
+            <a class="nav-link" target="_blank" rel="noopener noreferrer" href="https://github.com/rshpak1996">GitHub</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% static 'Aboutme.docx' %}">About me</a>
